--- a/public/stylesheets/partials/_hero.scss
+++ b/public/stylesheets/partials/_hero.scss
@@ -101,7 +101,7 @@
   
   .growth-marketing .hero {
     @include mobile {
-      padding-top: 0;
+      margin-top: 4em;
     }    
   }
 
