--- a/public/stylesheets/partials/_layout.scss
+++ b/public/stylesheets/partials/_layout.scss
@@ -245,12 +245,7 @@ figure.card:nth-child(2) {
   @include display-grid;
 }
 
-.submenu__container {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-auto-rows: 1fr;
-  grid-gap: .5em;
-}
+
 
 /*
 .grid-c--1x4 {
@@ -289,38 +284,6 @@ figure.card:nth-child(2) {
     margin-top: 100px;
   } 
 }
-
-
-.team-1 {
-  grid-column: 1 / 2;
-  grid-row: 1 /2;
-}
-
-.team-2 {
-  grid-column: 2 / 3;
-  grid-row: 1 /2;
-}
-
-.team-3 {
-  grid-column: 1 / 2;
-  grid-row: 2 /3;
-}
-
-.team-4 {
-  grid-column: 2 / 3;
-  grid-row: 2 / 3;
-}
-
-.team-5 {
-  grid-column: 1 / 2;
-  grid-row: 3 / 4;
-}
-
-.team-6 {
-  grid-column: 2 / 3;
-  grid-row: 3 / 4;
-}
-
 
 .grid-c__fluid {
     display: grid;
@@ -553,6 +516,35 @@ figure.card:nth-child(2) {
     justify-content: center;
     min-height: 100%;
 }
+
+/* Submenu */ 
+
+.submenu__container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: minmax(75px, auto) 1fr;
+  grid-gap: .5em;
+  }
+
+.is-visible-on-large {
+  @include mobile {
+    display: none;
+  }
+}
+.submenu a {
+  color: $black;
+}
+
+.submenu-item {
+  border: 4px solid $black;
+  padding: 2em 0;
+}
+
+.submenu-item:hover {
+  background-color: $cerise;
+  transition: .3s ease-in-out;
+}
+
 
 /* Container components */
 
