--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -757,47 +757,7 @@ textarea {
   padding-left: 90px; /* same size as the label elements */
 }
 
-/* 
 
-button {
-  /* This extra margin represent roughly the same space as the space
-     between the labels and their text fields */ /*
-  margin-left: .5em;
-}
-
-*/
-
-/* Growth marketing service page */
-
-.service__container {
-  margin-top: 3em;
-}
-
-
-.submenu {
-
-} 
-
-.submenu a {
-  color: $black;
-}
-
-.submenu-item {
-  border: 4px solid $black;
-  padding: 2em 0;
-}
-
-.submenu-item:hover {
-  background-color: $cerise;
-  transition: .3s ease-in-out;
-}
-
-.submenu__c
-
-/* todo */
-.service__story {
-  align-items: flex-end;
-}
 
 /* Projects Overview */
 
